--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aprendiendo Git</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>aprendiendo git</h1>
-    <p>mis primeros pasos en el versionado de codigo</p>
+    <h1>Aprendiendo Git</h1>
+    <p>mis primeros pasos e el versionado de codigo</p>
   </body>
 </html>
