--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Aprendiendo Git</h1>
-    <p>mis primeros pasos e el versionado de codigo</p>
+    <p>mis primeros pasos e el versionado de codigo desde la rama principal</p>
+    <ul>
+      <li>elemento-1</li>
+      <li>elemento-2</li>
+      <li>elemento-3</li>
+      <li>elemento-4</li>
+      <li>elemento-5</li>
+    </ul>
   </body>
 </html>
