--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       <li>elemento-4</li>
       <li>elemento-5</li>
     </ul>
+    <ol>
+      <li>primavera 21 - marzo</li>
+      <li>verano 21 - junio</li>
+      <li>otoño 21- septiembre</li>
+      <li>invierno 21- diciembre</li>
+    </ol>
     <script src="index.js"></script>
   </body>
 </html>
