--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
       <li>otoño 21- septiembre (Argentina y Bolivia)</li>
       <li>invierno 21- diciembre (Argentina y Bolivia)</li>
     </ol>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ratione
+      commodi, obcaecati minus praesentium a aperiam. Deleniti earum at maxime
+      hic ea corrupti illo fugiat. Tenetur voluptatem vitae quam possimus
+      molestias obcaecati, dicta repudiandae numquam eum commodi consectetur
+      facilis vel distinctio consequuntur ex eveniet quod sint placeat nam sequi
+      dolore!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+      distinctio quo suscipit laudantium exercitationem, recusandae molestiae
+      eaque est laboriosam deserunt at explicabo vero debitis dolorem atque
+      corrupti rem perspiciatis, sit obcaecati! Non alias reprehenderit corrupti
+      quaerat nobis aut porro ea, amet eos, nisi consequatur fugit est explicabo
+      minus neque accusantium!
+    </p>
     <script src="index.js"></script>
   </body>
 </html>
