agregando imagen de flujo Git y poniendo chulo el index.html

--- a/index.html
+++ b/index.html
@@ -10,38 +10,15 @@
     <h1>Aprendiendo Git</h1>
 
     <p>
-      mis primeros pasos e el versionado de codigo y aprendiendo a resolver
-      conflictos entre ramas
-    </p>
-    <ul>
-      <li>elemento-1</li>
-      <li>elemento-2</li>
-      <li>elemento-3</li>
-      <li>elemento-4</li>
-      <li>elemento-5</li>
-    </ul>
-    <ol>
-      <li>primavera 21 - marzo (Argentina y Bolivia)</li>
-      <li>verano 21 - junio (Argentina y Bolivia)</li>
-      <li>otoño 21- septiembre (Argentina y Bolivia)</li>
-      <li>invierno 21- diciembre (Argentina y Bolivia)</li>
-    </ol>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ratione
-      commodi, obcaecati minus praesentium a aperiam. Deleniti earum at maxime
-      hic ea corrupti illo fugiat. Tenetur voluptatem vitae quam possimus
-      molestias obcaecati, dicta repudiandae numquam eum commodi consectetur
-      facilis vel distinctio consequuntur ex eveniet quod sint placeat nam sequi
-      dolore!
+      mis primeros pasos en el versionado de codigo con Git y Github y
+      aprendiendo a resolver conflictos entre ramas
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-      distinctio quo suscipit laudantium exercitationem, recusandae molestiae
-      eaque est laboriosam deserunt at explicabo vero debitis dolorem atque
-      corrupti rem perspiciatis, sit obcaecati! Non alias reprehenderit corrupti
-      quaerat nobis aut porro ea, amet eos, nisi consequatur fugit est explicabo
-      minus neque accusantium!
+      Quieres dominar el uso de git?, mira este
+      <a href="https://jonmircha.com/git" target="_blank">enlace</a>
     </p>
+    <img src="git-flow.png" alt="flujo basico Git" />
+
     <script src="index.js"></script>
   </body>
 </html>
